hotfix/overflow bug and make header sticky

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,9 +6,13 @@
 
 #root {
     height: 100vh;
-    width: 100vw;
 }
 
 html {
     margin: 0;
+}
+
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
